--- a/05_FirstStepsInJavawithSpringBoot/rest-with-spring-boot-java/src/main/resources/application.yml
+++ b/05_FirstStepsInJavawithSpringBoot/rest-with-spring-boot-java/src/main/resources/application.yml
@@ -1,1 +1,14 @@
-
+sprint:
+  datasource:
+    dbcp2:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/udemy-estudo?useTimezone=true&serverTimezone=UTC
+      username: root
+      password: MySql2019!
+    jpa:
+      hibernate:
+        ddl-auto: update
+      properties:
+        hibernate:
+          dialect: org.hibernate.dialect.MySQL8Dialect
+        show-sql: false
